# SPH

./: .gitignore  CMakeLists.txt  Particle.h  README.md  SPH_painter.py  compile.sh  main  main.cpp  material.cpp  material.h  readme.md
include/: Particle.h  SPH_handle.h  Timer.h  common.h  matrix3d.h  parameter.h  threadPool.h
include/configor/: configor_conversion.hpp  json.hpp
src/: Particle.cpp  SPH.cpp  SPH.h  main.cpp  matrix3d.cpp  matrix3d.h
src/lib/: Particle.cpp  SPH_handle.cpp  matrix3d.cpp
tools/: SPH_painter.py  anim_example.py  fluid-0.json  fluid-1.json  fluid-2.json  fluid-3.json  input.json
